Bug 509959 - Dynamic launcher portal fails to add application
Summary: Dynamic launcher portal fails to add application
Status: RESOLVED FIXED
Alias: None
Product: xdg-desktop-portal-kde
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 6.3.6
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-09-26 05:59 UTC by Nikhilesh
Modified: 2025-09-27 11:40 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.5.0, 6.4.6
Sentry Crash Report:


Attachments
Demonstration of failing to add applications from a flatpak. (3.47 MB, video/webm)
2025-09-26 05:59 UTC, Nikhilesh
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nikhilesh 2025-09-26 05:59:48 UTC
Created attachment 185291 [details]
Demonstration of failing to add applications from a flatpak.

Any Flatpak application cannot add/install applications. For example, Web Apps (net.codelogistics.webapps) goes through the installation dialogue and even pops up with the Add Application.. dialogue from Plasma, but when I press Accept, nothing happens. Similar issue is also present in Steam, which is also unable to add entries to the Application Launcher, and in Web by GNOME when any PWA is attempted to be installed.
Comment 1 Akseli Lahtinen 2025-09-26 08:30:15 UTC
I can confirm this.

1. Install net.codelogistics.webapps and open it
2. Add new app, I tried with https://silverbullet.md 
3. Popup for "Add application..." appears, the Web Apps app shows it in the background
4. Press accept
5. It's gone!

Operating System: Fedora Linux 42
KDE Plasma Version: 6.5.80
KDE Frameworks Version: 6.19.0
Qt Version: 6.9.2
Kernel Version: 6.16.8-200.fc42.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 3600 6-Core Processor
Memory: 16 GiB of RAM (15.5 GiB usable)
Graphics Processor: AMD Radeon RX 6600
Comment 2 Bug Janitor Service 2025-09-26 14:19:33 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/xdg-desktop-portal-kde/-/merge_requests/434
Comment 3 Nicolas Fella 2025-09-27 11:40:10 UTC
Git commit 10b1583e547ad736d8dc94cb955ed25f7fd29b4c by Nicolas Fella.
Committed on 27/09/2025 at 11:36.
Pushed by nicolasfella into branch 'master'.

[dynamiclauncher] Also reply with name/icon when not editable

Currently we only send the data when they are editable, but x-d-p expects them in any case

M  +5    -1    src/dynamiclauncher.cpp

https://invent.kde.org/plasma/xdg-desktop-portal-kde/-/commit/10b1583e547ad736d8dc94cb955ed25f7fd29b4c
Comment 4 Nicolas Fella 2025-09-27 11:40:29 UTC
Git commit 66d8d4055dd1dcdacf7f96d2e2b3ff4d7e45cb49 by Nicolas Fella.
Committed on 27/09/2025 at 11:40.
Pushed by nicolasfella into branch 'Plasma/6.5'.

[dynamiclauncher] Also reply with name/icon when not editable

Currently we only send the data when they are editable, but x-d-p expects them in any case
(cherry picked from commit 10b1583e547ad736d8dc94cb955ed25f7fd29b4c)

M  +5    -1    src/dynamiclauncher.cpp

https://invent.kde.org/plasma/xdg-desktop-portal-kde/-/commit/66d8d4055dd1dcdacf7f96d2e2b3ff4d7e45cb49
Comment 5 Nicolas Fella 2025-09-27 11:40:41 UTC
Git commit 34135fa621a5f25a4f1630141a18b29c03751c87 by Nicolas Fella.
Committed on 27/09/2025 at 11:40.
Pushed by nicolasfella into branch 'Plasma/6.4'.

[dynamiclauncher] Also reply with name/icon when not editable

Currently we only send the data when they are editable, but x-d-p expects them in any case
(cherry picked from commit 10b1583e547ad736d8dc94cb955ed25f7fd29b4c)

M  +5    -1    src/dynamiclauncher.cpp

https://invent.kde.org/plasma/xdg-desktop-portal-kde/-/commit/34135fa621a5f25a4f1630141a18b29c03751c87