[dynamiclauncher] Also reply with name/icon when not editable

Currently we only send the data when they are editable, but x-d-p expects them in any case

BUG: 509959
(cherry picked from commit 10b1583e547ad736d8dc94cb955ed25f7fd29b4c)